--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: hehhehe # Or your preferred site title
+title: DnA  # Or your preferred site title
 # subtitle: "My Portfolio"
 ---
 
@@ -146,7 +146,7 @@ title: hehhehe # Or your preferred site title
 </style>
 
 <div class="cover-section">
-  <!-- <h1>DnA</h1> -->
+  <!-- <h1>DnA Photography</h1> -->
 </div>
 
 <div class="content-switcher">
