--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+---
 layout: page # Use the theme's default page layout
-title:  # Or your preferred site title for the browser tab
+title: hehehee # Or your preferred site title for the browser tab
 subtitle: "My Portfolio" # Optional subtitle if your theme uses it
+---
 <style>
   /* Basic styles for the new layout - we can move this to custom.css later */
   /* Target the theme's column container to make it full width */
@@ -62,22 +64,7 @@ main.container-md > .row,
 main.container-md {
     max-width: none !important;
 }
-  .cover-section {
-    height: 70vh; /* Adjust height as needed */
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white; /* Assuming dark cover photo */
-    /* Add your cover image URL here */
-    background-image: url('/assets/img/your-cover-image.jpg'); /* <-- IMPORTANT: REPLACE THIS PATH */
-  }
-  .cover-section h1 {
-    font-size: 3em;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-  }
+
   .content-switcher {
     text-align: center;
     padding: 20px 0;
