--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: hehehee # Or your preferred site title
-subtitle: "My Portfolio"
+subtitle: " "
 ---
 <style>
   /* --- Main Page & Theme Overrides --- */
@@ -167,7 +167,7 @@ subtitle: "My Portfolio"
 <div id="videos-content" class="content-section">
   <h2>Videos</h2>
   <div class="gallery">
-    <p><em>Your videos will appear here.</em></p>
+    <p><em>Ayinilla.</em></p>
   </div>
 </div>
 
